poketwo/webhook-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server
spec:
  replicas: 4
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      containers:
        - name: server
          image: ghcr.io/poketwo/webhook-server:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "100Mi"
              cpu: "200m"
            requests:
              memory: "10Mi"
              cpu: "50m"
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
      imagePullSecrets:
        - name: ghcr-auth
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: webhook-server
                topologyKey: kubernetes.io/hostname
