poketwo/webhook-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-server
spec:
  clusterIP: None
  selector:
    app: webhook-server
  ports:
    - port: 8000
