poketwo/webhook-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: webhooks.poketwo.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-server
                port:
                  number: 8000
  tls:
    - hosts:
        - webhooks.poketwo.io
      secretName: webhook-server-ingress-tls
